User can now add and remove forms to enter subreddits. State is updated to contain a list of all subreddits.

--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,14 @@
   color: white;
 }
 
-.Add-subs {
+.Add-subreddits {
   background-color: gray;
   height: 25rem;
   margin: 1rem;
   padding: 1rem;
 }
 
-.Add-sub {
+.Subreddit {
   background-color: darkslategray;
   display: flex;
   margin-bottom: 1rem;
