--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,21 @@ html {
   --shadow: rgba(0, 0, 0, .4);
 }
 
+/* WEBKIT AUTOFILL OVERRIDE */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px var(--light-green) inset !important;
+}
+
 /* REACT DEFAULT */
 .App {
   text-align: center;
 }
 .App-header {
   align-items: center;
-  background-color: #1b3408;
+  background-color: var(--dark-green);
   box-shadow: 0px 5px 5px var(--shadow);
   color: #f7f7d4;
   display: flex;
